Bug 101269 - Version 5.2.0.x - Cannot click/edit text inside a frame
Summary: Version 5.2.0.x - Cannot click/edit text inside a frame
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.2.0.1 rc
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1
Keywords: bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2016-08-03 13:32 UTC by PaulJayD
Modified: 2016-08-04 14:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
docx file with Frame created in LO 5.1.4.2 (18.13 KB, application/vnd.oasis.opendocument.text)
2016-08-04 01:09 UTC, PaulJayD
Details

Note You need to log in before you can comment on or make changes to this bug.
Description PaulJayD 2016-08-03 13:32:35 UTC
Cannot click/edit text inside a frame.
Comment 1 Aron Budea 2016-08-03 21:18:30 UTC
Please give detailed steps of what you were doing, what you were expecting to happen, and what actually happened. Give your LibreOffice and OS version as well.
Comment 2 PaulJayD 2016-08-04 01:09:30 UTC
Created attachment 126563 [details]
docx file  with Frame created in LO 5.1.4.2

The attached file "Frames for Wallet.docx" was created in LO 5.1.4.2 and is edittable therein.
When opened in LO 5.2.0.4, clicking in the frame does not set the cursor. I cannot edit the text within the frame.
I'm on Windows 10 currently.
Comment 3 PaulJayD 2016-08-04 01:13:00 UTC
The attached file "Frames for Wallet.docx" was created in LO 5.1.4.2 and is edittable therein.
When opened in LO 5.2.0.4, clicking in the frame does not set the cursor. I cannot edit the text within the frame.
I'm on Windows 10 currently.
Comment 4 Aron Budea 2016-08-04 04:31:29 UTC
Thanks for the sample, it was very helpful!

Reproduced with LibreOffice 5.2.0.1 and master build, not reproduced with LibreOffice 5.1.5.2 (Windows 7). => regression
Also reproduced with LO 5.2.0.3 / Ubuntu 16.04. => likely all OSes affected
Comment 5 Commit Notification 2016-08-04 08:16:38 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=24c009de4d6d27233027e9bcd86ea181d230be8f

Resolves: tdf#101269 cannot click/edit text inside a frame

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Caolán McNamara 2016-08-04 08:21:47 UTC
backport for 5-2 in gerrit
Comment 7 Commit Notification 2016-08-04 14:37:28 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5703c3bdf1f4b60067207993f9f42430d9901e1c&h=libreoffice-5-2

Resolves: tdf#101269 cannot click/edit text inside a frame

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.