Resolves: tdf#101269 cannot click/edit text inside a frame

regression from...

commit b0c0a074a2318a231f3f635784da494f1b713c53
Date:   Mon Apr 18 11:03:43 2016 +0200

    clang-tidy clang-analyzer-deadcode.DeadStores

    suspect that some of these may reveal latent bugs....

and restore method then removed by

commit 47f62540bd2c2f107313bb0c6f141cd4460b6379
Date:   Thu May 19 10:31:47 2016 +0200

    loplugin:unusedmethods in sw

Change-Id: I14826eecadbc1a74e408f8907eea8746debe4db4